# rx_scout

./: .env.example  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/rx_scout/models/: __init__.py  comorbidity.py  disease.py  disease_similarity.py  drug.py  drug_disease_approval.py  side_effect.py
src/rx_scout/scripts/: setup_db.sh
src/rx_scout/sqlalchemy/: __init__.py  comorbidity.py  disease.py  disease_similarity.py  drug.py  drug_disease_approval.py  side_effect.py
tests/: conftest.py  test_db_base.py
tests/integration/ontology/: test_disease_ontology.py
tests/integration/sqlalchemy/: test_comorbidity.py  test_db_base.py  test_disease.py  test_disease_similarity.py  test_drug.py  test_side_effect.py
tests/unit/models/: test_comorbidity_model.py  test_disease_model.py  test_disease_similarity_model.py  test_drug_model.py  test_side_effect_model.py
