[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rxscout"
version = "0.1.0"
description = "Agentic RAG system for drug repurposing discovery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dami Gupta" },
]
keywords = ["drug-repurposing", "rag", "agents", "biomedical", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "anthropic>=0.40",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "streamlit>=1.38",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rxscout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that hit external APIs or databases (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true